--- a/style.css
+++ b/style.css
@@ -27,21 +27,16 @@ body {
     z-index: 9
 }
 
-
-
 h1 {
-
     font-size: 40px;
     font-family: sans-serif;
     font-weight: 300;
-
 }
 
 #name {
     font-size: 30px;
     line-height: 1.2;
     font-family: 'Cinzel Decorative', cursive;
-
 }
 
 h2 {
@@ -64,7 +59,6 @@ h2 {
     margin: 8px auto;
 }
 
-
 p {
     max-width: 450px;
     margin: 25px auto;
@@ -82,12 +76,14 @@ p {
 }
 
 .menu {
-
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    margin-top: 0px;
+    top: 0px;
     list-style: none;
     font-family: sans-serif;
     position: absolute;
-    top: 10px;
-    right: 30px;
     z-index: 10;
     cursor: pointer;
 }
@@ -96,15 +92,18 @@ p {
     float: left;
     color: #fff;
     padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
+    padding-left: 33px;
+    padding-right: 25px;
     padding-bottom: 5px;
     font-family: fantasy;
-    font-size: 20px
+    font-size: 20px;
+    display: inline;
 }
 
 .links:hover {
     background-color: dodgerblue;
+    font-size: 25px;
+    text-decoration: underline;
 }
 
 html {
@@ -113,6 +112,8 @@ html {
 
 a {
     text-decoration: none;
+    color: crimson;
+    text-shadow: 2px 2px gainsboro;
 }
 
 #apps {
@@ -139,4 +140,8 @@ img:hover {
     width: 100%;
     height: 800px;
     background-color: blanchedalmond;
+}
+
+#contact {
+    background-color: bisque;
 }
