--- a/style.css
+++ b/style.css
@@ -11,15 +11,7 @@ body {
 }
 
 #welcome {
-
-    position: absolute;
-    height: 800px;
     color: #FFFFFF;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.83;
     background: linear-gradient(#60ebeb 0%, #27ae60 100%);
     display: table;
     width: 100%;
@@ -73,19 +65,6 @@ p {
     text-align: center;
     vertical-align: middle;
 
-}
-
-.menu {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    margin-top: 0px;
-    top: 0px;
-    list-style: none;
-    font-family: sans-serif;
-    position: absolute;
-    z-index: 10;
-    cursor: pointer;
 }
 
 .links {
@@ -164,4 +143,10 @@ img:hover {
     color: black;
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.my_nav_bar {
+    position: sticky;
+    top: 0;
+    z-index: 99999;
 }
